--- a/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
@@ -176,8 +176,8 @@
                                                         <ul class="nav child_menu" style="@(ViewBag.SegundoNivel == "IT_Catalogos_RH" ? "display:block" : null )">
                                                             <li class="@(ViewBag.TercelNivel == "IT_carpetas_red" ? "current-page" : null )"><a href="@Url.Action( "Index", "IT_carpetas_red")">Carpetas Red</a></li>
                                                             <li class="@(ViewBag.TercelNivel == "IT_comunicaciones_tipo" ? "current-page" : null )"><a href="@Url.Action( "Index", "IT_comunicaciones_tipo")">Comunicaciones</a></li>
-                                                            <li class="@(ViewBag.TercelNivel == "IT_hardware_tipo" ? "current-page" : null )"><a href="@Url.Action( "Index", "IT_hardware_tipo")">Hardware</a></li>
-                                                            <li class="@(ViewBag.TercelNivel == "IT_software_tipo" ? "current-page" : null )"><a href="@Url.Action( "Index", "IT_software_tipo")">Software</a></li>
+                                                            <li class="@(ViewBag.TercelNivel == "IT_inventory_hardware_type" ? "current-page" : null )"><a href="@Url.Action( "Index", "IT_inventory_hardware_type")">Tipo Hardware</a></li>
+                                                            @*<li class="@(ViewBag.TercelNivel == "IT_software_tipo" ? "current-page" : null )"><a href="@Url.Action( "Index", "IT_software_tipo")">Software</a></li>*@
                                                             <li class="@(ViewBag.TercelNivel == "IT_internet_tipo" ? "current-page" : null )"><a href="@Url.Action( "Index", "IT_internet_tipo")">Internet</a></li>
                                                         </ul>
                                                     </li>
