--- a/CódigoFuente/BitacorasProduccion/Views/IT_inventory_hardware_type/Details.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_inventory_hardware_type/Details.cshtml
@@ -1,11 +1,11 @@
-﻿@model Portal_2_0.Models.IT_inventory_software
+﻿@model Portal_2_0.Models.IT_inventory_hardware_type
 
 @{
-    ViewBag.Title = "Software Details";
+    ViewBag.Title = "Hardware Details";
     ViewBag.PrimerNivel = "sistemas";
-    ViewBag.SegundoNivel = "IT_Catalogos_inventory_software";
-    ViewBag.TercerNivel = "IT_Inventory_software";
-    ViewBag.ControllerName = "IT_inventory_software";
+    ViewBag.SegundoNivel = "IT_Catalogos_RH";
+    ViewBag.TercerNivel = "IT_inventory_hardware_type";
+    ViewBag.ControllerName = "IT_inventory_hardware_type";
 
 
 }
@@ -57,6 +57,12 @@
                         </div>
 
                         <div class="item form-group">
+                            @Html.LabelFor(model => model.puede_asignarse, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
+                            <div class="col-md-3 col-sm-3 ">
+                                @Html.EditorFor(model => model.puede_asignarse, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off", @disabled = "disabled" } })
+                            </div>
+                        </div>
+                          <div class="item form-group">
                             @Html.LabelFor(model => model.activo, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
                             <div class="col-md-3 col-sm-3 ">
                                 @Html.EditorFor(model => model.activo, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off", @disabled = "disabled" } })
