--- a/CódigoFuente/BitacorasProduccion/Views/IT_matriz_requerimientos/Details.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_matriz_requerimientos/Details.cshtml
@@ -75,7 +75,14 @@
                     <div class="x_content">
                         <div class="form-group row">
                             <!--Estado-->
-                            <label class="control-label col-md-9" style="text-align: right;">
+                            <label class="control-label col-md-1" style="text-align: left;">
+                                <b>Tipo</b>
+                            </label>
+                            <div class="col-md-2">
+                                <input type="text" class="form-control col-md-12" style="text-align: right; font-weight: bold" value="@Bitacoras.Util.IT_MR_tipo.DescripcionStatus(Model.tipo).ToUpper()" readonly>
+                            </div>
+                         <!--Estado-->
+                            <label class="control-label col-md-6" style="text-align: right;">
                                 <b>Estado</b>
                             </label>
                             <div class="col-md-3">
