--- a/CódigoFuente/BitacorasProduccion/Views/IT_matriz_requerimientos/ListadoSolicitudes.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_matriz_requerimientos/ListadoSolicitudes.cshtml
@@ -72,25 +72,25 @@
                                         <div class="form-group">
                                             @using (Html.BeginForm(null, null, FormMethod.Get, new { id = "buscarForm", @class = "form-horizontal form-label-left" }))
                                             {
-                                            <div class="form-group row ">
-                                                <label class="control-label col-md-1 col-sm-1" for="estatus" style="text-align:right">Estatus:</label>
-                                                <div class="col-md-3 col-sm-3 ">
-                                                    @Html.DropDownList("estatus", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
-                                                </div>
-                                                <label class="control-label col-md-1 col-sm-1" for="nombre" style="text-align:right">Empleado:</label>
-                                                <div class="col-md-3 col-sm-3 ">
-                                                    <input type="text" id="nombre" name="nombre" class="form-control" value="@nombre" autocomplete="off" />
-                                                </div>
-                                                <div class="col-md-1 col-sm-1">
+                                                <div class="form-group row ">
+                                                    <label class="control-label col-md-1 col-sm-1" for="estatus" style="text-align:right">Estatus:</label>
+                                                    <div class="col-md-3 col-sm-3 ">
+                                                        @Html.DropDownList("estatus", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
+                                                    </div>
+                                                    <label class="control-label col-md-1 col-sm-1" for="nombre" style="text-align:right">Empleado:</label>
+                                                    <div class="col-md-3 col-sm-3 ">
+                                                        <input type="text" id="nombre" name="nombre" class="form-control" value="@nombre" autocomplete="off" />
+                                                    </div>
+                                                    <div class="col-md-1 col-sm-1">
 
-                                                    <a href="@Url.Action("solicitudes_sistemas", ViewBag.ControllerName)" class="btn btn-warning" title="Restablecer">
-                                                        <i class="fa fa-refresh"></i> 
-                                                    </a>
+                                                        <a href="@Url.Action("solicitudes_sistemas", ViewBag.ControllerName)" class="btn btn-warning" title="Restablecer">
+                                                            <i class="fa fa-refresh"></i>
+                                                        </a>
+                                                    </div>
+                                                    <div class="col-md-1 col-sm-1">
+                                                        <input type="submit" value="Filtrar" class="btn btn-info float-right" />
+                                                    </div>
                                                 </div>
-                                                <div class="col-md-1 col-sm-1">
-                                                    <input type="submit" value="Filtrar" class="btn btn-info float-right" />
-                                                </div>
-                                            </div>
 
                                             }
                                             <hr />
@@ -125,6 +125,9 @@
                                                 </th>
                                                 <th>
                                                     Fecha Solicitud
+                                                </th>
+                                                <th>
+                                                    Tipo Solicitud
                                                 </th>
                                                 <th>
                                                     @Html.DisplayNameFor(model => model.estatus)
@@ -183,6 +186,9 @@
                                                     </td>
                                                     <td>
                                                         @Html.DisplayFor(modelItem => item.fecha_solicitud)
+                                                    </td>
+                                                    <td>
+                                                        @(Bitacoras.Util.IT_MR_tipo.DescripcionStatus(item.tipo))
                                                     </td>
                                                     <td>
                                                         @Bitacoras.Util.IT_MR_Status.DescripcionStatus(item.estatus)
